# service-telemetry

./: Cargo.toml  README.md
examples/: basic-http.rs
k6/: basic-http-load-testing.js
src/: init.rs  lib.rs  metrics.rs  middleware.rs  telemetry.rs
